@@ -362,6 +362,12 @@ C<method set_alpn_select_cb_with_protocols : void ($protocols : string[]);>
 
 Calls native L<SSL_CTX_set_alpn_select_cb|https://docs.openssl.org/1.1.1/man3/SSL_CTX_set_alpn_select_cb> function defined to select $protocols.
 
+=head2 set_next_proto_select_cb_with_protocols
+
+C<method set_next_proto_select_cb_with_protocols : void ($protocols : string[]);>
+
+Calls native L<SSL_CTX_set_next_proto_select_cb|https://docs.openssl.org/1.1.1/man3/SSL_CTX_set_next_proto_select_cb> function defined to select $protocols.
+
 =head2 DESTROY
 
 C<method DESTROY : void ();>
