@@ -224,6 +224,8 @@ class Net::SSLeay::SSL_CTX : pointer {
   
   native method set_alpn_select_cb_with_protocols : void ($protocols : string[]);
   
+  native method set_next_proto_select_cb_with_protocols : void ($protocols : string[]);
+  
   native method DESTROY : void ();
   
 }
